<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Account Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="addAccount">Add Account</string>
    <string name="addTrans">Add Transaction</string>
    <string name="recentTrans">Recent Transactions</string>
    <string name="accountNumber">Account Number</string>
    <string name="title_activity_add_account">AddAccountActivity</string>
    <string name="bankName">Bank Name</string>
    <string name="accNumber">Acccount Number</string>
    <string name="welcome">Welcome</string>
    <string name="availableAccounts">Available Accounts</string>
    <string name="bankNamehint">Enter bank name</string>
    <string name="accountNumberHint">Enter account Number</string>
    <string name="branchname">Branch Name</string>
    <string name="branchNameHint">Enter your branch name</string>
    <string name="branchAddress">Branch Address</string>
    <string name="branchaddressHint">Enter your branch address</string>
    <string name="accountHolder">Account holder(s)</string>
    <string name="accountHolderHint">Enter account holders</string>
    <string name="ifsc">IFSC</string>
    <string name="ifscCodeHint">Enter IFSC Code</string>
    <string name="currentBalance">Current balance</string>
    <string name="currentBalanceHint">Current balance</string>
    <string name="title_activity_add_trans">AddTransActivity</string>
    <string name="addTransaction">Add Transaction</string>
    <string name="account">Account</string>
    <string name="transaction">Transaction</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount</string>
    <string name="mode">Mode</string>
    <string name="modeDetails">Mode Number</string>
    <string name="instrumentNumberHint">Enter cheque/draft number</string>
    <string name="amountHint">Enter amount</string>
    <string name="title_activity_recent_trans">RecentTransActivity</string>
    <string name="noRecentTrans">No recent transactions!</string>
    <string name="noAccounts">No accounts created yet!</string>
    <string name="date">Date</string>
    <string name="defaultDate">default_date</string>
    <string name="remarks">Remarks</string>
    <string name="remarksHint">Brief summary of transaction</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="contactUs">Contact Us</string>
    <string name="sayan">Sayan Chakraborty</string>
    <string name="anuran">Anuran Acharjee</string>
    <string name="sayanID">jroratorio@gmail.com</string>
    <string name="anuranID">anuran.acharjee2@gmail.com</string>
    <string name="rajorsi">Rajorsi Mukherjee</string>
    <string name="rajorsiID">sammy619.rulez@gmail.com</string>
    <string name="exit">Exit</string>
    <string name="enterUserID">Enter User ID</string>
    <string name="enterPassword">Enter password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="changeCredentials">Change Credentials</string>
    <string name="oldPassword">Enter old password</string>
    <string name="setCredentials">Set Credentials</string>
    <string name="login">Login</string>
    <string name="enterNewPassword">Enter new password</string>
    <string name="confirmNewPassword">Confirm new password</string>
    <string name="minimumSix">Minimum 6 characters</string>
    <string name="forgotPassword">Forgot Password? Click here</string>
    <string name="resetCredentials">Reset Credentials</string>
    <string name="title_activity_edit_account">EditAccountActivity</string>
    <string name="editAccount">Edit Account</string>
    <string name="saveChanges">Save Changes</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="showAll">Show All</string>
    <string name="sortAccountNumber">Sort by Account Number</string>
    <string name="sortDate">Sort by date</string>
    <string name="twentyFiveTransactions">Last 25 transactions</string>
    <string name="exportDB">Export to SDCard</string>
    <string name="importDB">Import from SDCard</string>
    <string name="deleteTransaction">Delete Transaction</string>
    <string name="searchTransactionDate">Search Transactions by Date</string>
    <string name="fromDate">From:</string>
    <string name="toDate">To:</string>
    <string name="searchDate">Search by Date</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="searchTransactionAmount">Search Transactions by Amount</string>
    <string name="lowerLimit">Lower limit:</string>
    <string name="upperLimit">Upper Limit:</string>
    <string name="searchAmount">Search by Amount</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="transID">Trans ID:</string>
    <string name="accNo">Account No:</string>
    <string name="transDate">Trans Date:</string>
    <string name="transDetails">Trans Details:</string>
    <string name="transType">Trans Type:</string>
    <string name="transAmt">Trans Amount:</string>
    <string name="transRemarks">Remarks:</string>
    <string name="placeholder">placeholder</string>

</resources>
