<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTransId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" 
        android:text="" />
	<TableLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:stretchColumns="1">
	    
	    <TableRow>
	       <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white"
		        android:text="@string/transID" />
		   <TextView
		        android:id="@+id/tvTransID"
		        android:textColor="@color/white"
		        android:layout_marginLeft="5dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/placeholder" />
	   </TableRow>
	    
	   <TableRow>
	       <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white"
		        android:text="@string/accNo" />
		   <TextView
		        android:id="@+id/tvAcno"
		        android:textColor="@color/white"
		        android:layout_marginLeft="5dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/placeholder" />
	   </TableRow>
	   
	   <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white"
		        android:text="@string/transDate" />       
		    <TextView
		        android:id="@+id/tvTransDate"
		        android:textColor="@color/white"
		        android:layout_marginLeft="5dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/placeholder" />
	  </TableRow>
	  
	  <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white"
		        android:text="@string/transDetails" />	         
		    <TextView
		        android:id="@+id/tvTransDetails"
		        android:layout_marginLeft="5dp"
		        android:textColor="@color/white"
		        android:scrollHorizontally="false"
		        android:singleLine="false"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:text="@string/placeholder" />
	  </TableRow>
	  
	  <TableRow>
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white"
		        android:text="@string/transType" />       
	    
	       <TextView
		        android:id="@+id/tvTransType"
		        android:layout_marginLeft="5dp"
		        android:textColor="@color/white"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/placeholder" />
	   </TableRow>	   
	       
	   <TableRow>
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white"
		        android:text="@string/transAmt" />       
		    <TextView
		        android:id="@+id/tvTransAmount"
		        android:layout_marginLeft="5dp"
		        android:textColor="@color/white"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/placeholder" />
	  </TableRow>
	  
	  <TableRow>
		 <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white"
		        android:text="@string/transRemarks" />       
	 	 <TextView
		        android:id="@+id/tvTransRemarks"
		        android:layout_marginLeft="5dp"
		        android:textColor="@color/white"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/placeholder" />
	  </TableRow>	  
	 </TableLayout> 
 </LinearLayout>
 

 